Started Linear Algebra helpers.

--- a/sandbooks/notebooks/torch_functions.ipynb
+++ b/sandbooks/notebooks/torch_functions.ipynb
@@ -2284,6 +2284,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iter = torch.randint(1000,[32])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testy = torch.rand(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "too many indices for tensor of dimension 1",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-ce9069972ad1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtesty\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m23\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m23\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m23\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m23\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m24\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m24\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for tensor of dimension 1"
+     ]
+    }
+   ],
+   "source": [
+    "testy[[23,23,23],[23,24,24]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand(32,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dists_naive(x):\n",
+    "    dim = len(x)\n",
+    "    out = []\n",
+    "    for i in range(dim):\n",
+    "        for j in range(i+1):\n",
+    "            out.append(x[i]-x[j])\n",
+    "    return torch.cat(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dists_smarter(x):\n",
+    "    dim = len(x)\n",
+    "    out = []\n",
+    "    for i in range(dim-1):\n",
+    "        out.append(x[i]-x[i+1:])\n",
+    "    return torch.cat(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "CPU times: user 13.6 ms, sys: 0 ns, total: 13.6 ms\nWall time: 12.5 ms\n"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "out_dists_naive = dists_naive(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.Size([1584])"
+     },
+     "metadata": {},
+     "execution_count": 148
+    }
+   ],
+   "source": [
+    "out_dists_naive.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "CPU times: user 0 ns, sys: 2.17 ms, total: 2.17 ms\nWall time: 1.47 ms\n"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "out_dists_smarter = dists_smarter(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.Size([496, 3])"
+     },
+     "metadata": {},
+     "execution_count": 143
+    }
+   ],
+   "source": [
+    "out_dists_smarter.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
