--- a/sandbooks/notebooks/la_ops.ipynb
+++ b/sandbooks/notebooks/la_ops.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.rand(4,3)"
+    "x = torch.rand(10,1,4,3)"
    ]
   },
   {
@@ -53,20 +53,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "tensor([[ 0.8126, -0.6735,  0.3447],\n        [-0.1283, -0.8331,  0.0822],\n        [ 0.5632, -0.4720,  0.2952],\n        [-0.9409, -0.1596, -0.2626],\n        [-0.2494,  0.2015, -0.0495],\n        [ 0.6915,  0.3611,  0.2131]])"
+      "text/plain": "torch.Size([10, 1, 6, 3])"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 7
     }
    ],
    "source": [
-    "diff"
+    "diff.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.Size([180])"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "diff.reshape(-1).shape"
    ]
   },
   {
@@ -190,6 +208,131 @@
    ],
    "source": [
     "AP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timeing = torch.rand(10000,1,32,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "CPU times: user 6.9 ms, sys: 297 µs, total: 7.2 ms\nWall time: 2.3 ms\n"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "out = torch.pow(timeing,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "CPU times: user 9.69 ms, sys: 71 µs, total: 9.76 ms\nWall time: 7.18 ms\n"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "out = []\n",
+    "for i in range(100):\n",
+    "    out.append(torch.pow(timeing[i,0,:,:],2))\n",
+    "out = torch.stack(out).unsqueeze(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.Size([100, 1, 32, 3])"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newx = torch.rand(10,1,10,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[[[-0.0576,  0.3204, -0.4223],\n          [ 0.0816, -0.3339, -0.8451],\n          [ 0.1656, -0.3345, -0.2682],\n          [ 0.5215,  0.2270, -0.8511],\n          [-0.2540, -0.3154, -0.1476],\n          [ 0.0442, -0.4684, -0.3170],\n          [ 0.1111,  0.1225, -0.3551],\n          [ 0.2815,  0.1587, -0.2181],\n          [-0.2793,  0.2973, -0.2141]]],\n\n\n        [[[ 0.7573,  0.6412, -0.1278],\n          [ 0.1225, -0.2664, -0.1732],\n          [-0.1381, -0.0250,  0.2396],\n          [ 0.3205, -0.0775, -0.7031],\n          [ 0.1957,  0.3311,  0.1838],\n          [ 0.2961, -0.1205, -0.6274],\n          [ 0.3403,  0.6015,  0.0732],\n          [ 0.5638, -0.2678, -0.3201],\n          [ 0.6781,  0.2692, -0.0844]]],\n\n\n        [[[-0.0727,  0.4464, -0.1176],\n          [-0.4191, -0.1918, -0.3652],\n          [-0.9419,  0.1777,  0.0230],\n          [ 0.0123, -0.3120, -0.3108],\n          [-0.2220, -0.1711,  0.4222],\n          [-0.2799,  0.0845, -0.3527],\n          [-0.8233, -0.3888, -0.1663],\n          [-0.2451, -0.3307,  0.3516],\n          [-0.8182,  0.1718, -0.2007]]],\n\n\n        [[[ 0.1751, -0.2617, -0.2967],\n          [ 0.0766, -0.1765, -0.4145],\n          [-0.1787, -0.3873, -0.4548],\n          [-0.4590, -0.1530, -0.1989],\n          [ 0.1442, -0.2210, -0.1624],\n          [-0.1289, -0.4382,  0.0253],\n          [ 0.2404,  0.1055, -0.3316],\n          [-0.3829, -0.5014, -0.2315],\n          [-0.4022,  0.0735,  0.3685]]],\n\n\n        [[[-0.0805, -0.3382, -0.6030],\n          [-0.4758, -0.9230, -0.5837],\n          [-0.6886, -0.7667, -0.2856],\n          [ 0.0624, -0.2352, -0.6513],\n          [-0.0420, -0.6225, -0.6710],\n          [ 0.1789, -0.1593,  0.0387],\n          [-0.6307, -0.7152,  0.0011],\n          [-0.2079,  0.0211, -0.4219],\n          [-0.5591, -0.0771, -0.4673]]],\n\n\n        [[[-0.0835,  0.6054,  0.1121],\n          [ 0.6492,  0.3696,  0.0353],\n          [-0.0059,  0.2795, -0.1385],\n          [ 0.7935,  0.8437, -0.0140],\n          [ 0.6532,  0.3299, -0.1408],\n          [ 0.2446,  0.3971, -0.0557],\n          [ 0.4417,  0.0077, -0.3743],\n          [ 0.0768,  0.0142,  0.1153],\n          [ 0.6684,  0.8050,  0.1878]]],\n\n\n        [[[ 0.6119, -0.6395,  0.0685],\n          [-0.0370, -0.4714,  0.2826],\n          [ 0.6692, -0.8082,  0.8334],\n          [ 0.1122, -0.0581,  0.2033],\n          [ 0.5310, -0.0921,  0.1745],\n          [ 0.1090, -0.9108,  0.0074],\n          [ 0.5957, -0.3667,  0.3581],\n          [ 0.0557, -0.8402,  0.6015],\n          [ 0.2157, -0.0404,  0.6186]]],\n\n\n        [[[ 0.2491,  0.0824,  0.3824],\n          [-0.0264,  0.6019,  0.1444],\n          [-0.0561,  0.5045,  0.3314],\n          [ 0.4836,  0.0761,  0.0627],\n          [ 0.5015,  0.3823,  0.5341],\n          [ 0.1387,  0.1809, -0.0785],\n          [-0.3444,  0.6151,  0.4251],\n          [ 0.2114, -0.0024,  0.3237],\n          [-0.0903,  0.4667,  0.1516]]],\n\n\n        [[[-0.1272, -0.6128, -0.0274],\n          [ 0.6594, -0.8731,  0.3824],\n          [ 0.1738, -0.2914,  0.5775],\n          [ 0.0693, -0.7603,  0.5732],\n          [ 0.2364, -0.2736,  0.7165],\n          [ 0.2270, -0.6415,  0.2167],\n          [-0.0087, -0.8730,  0.1510],\n          [ 0.1097, -0.8643,  0.8415],\n          [ 0.7255, -0.1522,  0.0452]]],\n\n\n        [[[-0.4064,  0.0736, -0.1210],\n          [ 0.0366, -0.4138, -0.4810],\n          [-0.5303,  0.4021, -0.7407],\n          [-0.4357, -0.3691, -0.3624],\n          [ 0.0202, -0.0902, -0.5852],\n          [ 0.0289, -0.1010, -0.6520],\n          [-0.6967, -0.3157, -0.3984],\n          [-0.4169, -0.2048,  0.0876],\n          [-0.2142,  0.4492, -0.4663]]]])"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "newx[:,:,0:1] - newx[:,:,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.Size([10, 1, 3])"
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "source": [
+    "newx[:,0,0:1,:].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.Size([10, 9, 3])"
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "source": [
+    "newx[:,0,1:,:].shape"
    ]
   },
   {
