Changed notebook folder struct.

--- a/sandbox/notebooks/torch_functions.ipynb
+++ b/sandbox/notebooks/torch_functions.ipynb
@@ -24,6 +24,7 @@
     "from sklearn.neighbors import DistanceMetric\n",
     "from pymfree.util.utils import any_norm_nn_search\n",
     "from pymfree.util.utils import scale_params\n",
+    "from pymfree.util.utils import check_pymfree_type\n",
     "from pymfree.core.function import Norm\n",
     "from pymfree.core.function import L2Norm\n",
     "from pymfree.core.function import L2SquaredNorm\n",
@@ -2425,6 +2426,51 @@
    ],
    "source": [
     "out_dists_smarter.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand(10,1,32,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "isinstance(x, torch.Tensor) and len(x.shape) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "check_pymfree_type(x)['matrix']"
    ]
   },
   {
