--- a/sandbox/notebooks/la_ops.ipynb
+++ b/sandbox/notebooks/la_ops.ipynb
@@ -337,6 +337,346 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates = torch.rand(10,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indeces = torch.randint(10,(10,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[2, 6, 4, 5, 2, 0, 0, 1, 0, 8],\n        [8, 0, 4, 3, 8, 7, 0, 4, 1, 9],\n        [9, 0, 9, 2, 4, 1, 0, 4, 8, 8],\n        [1, 6, 6, 5, 6, 2, 3, 0, 9, 8],\n        [4, 9, 3, 0, 1, 0, 2, 1, 5, 2],\n        [4, 5, 1, 6, 7, 8, 1, 3, 4, 0],\n        [6, 4, 2, 5, 8, 9, 9, 4, 2, 0],\n        [4, 2, 7, 2, 9, 1, 0, 7, 5, 3],\n        [1, 0, 6, 2, 5, 5, 5, 9, 8, 7],\n        [5, 9, 9, 1, 9, 0, 2, 0, 0, 2]])"
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "indeces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([0.6212, 0.5242, 0.7471])"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "coordinates[8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[[9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [6.7323e-01, 8.3049e-01, 2.3087e-01],\n         [7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [6.2123e-01, 5.2423e-01, 7.4708e-01]],\n\n        [[6.2123e-01, 5.2423e-01, 7.4708e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [1.0905e-01, 2.6029e-04, 3.3363e-01],\n         [6.2123e-01, 5.2423e-01, 7.4708e-01],\n         [8.4762e-01, 7.2292e-01, 7.9634e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01]],\n\n        [[7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [6.2123e-01, 5.2423e-01, 7.4708e-01],\n         [6.2123e-01, 5.2423e-01, 7.4708e-01]],\n\n        [[7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [6.7323e-01, 8.3049e-01, 2.3087e-01],\n         [6.7323e-01, 8.3049e-01, 2.3087e-01],\n         [1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [6.7323e-01, 8.3049e-01, 2.3087e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [1.0905e-01, 2.6029e-04, 3.3363e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [6.2123e-01, 5.2423e-01, 7.4708e-01]],\n\n        [[7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [1.0905e-01, 2.6029e-04, 3.3363e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01]],\n\n        [[7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [6.7323e-01, 8.3049e-01, 2.3087e-01],\n         [8.4762e-01, 7.2292e-01, 7.9634e-01],\n         [6.2123e-01, 5.2423e-01, 7.4708e-01],\n         [7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [1.0905e-01, 2.6029e-04, 3.3363e-01],\n         [7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01]],\n\n        [[6.7323e-01, 8.3049e-01, 2.3087e-01],\n         [7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [6.2123e-01, 5.2423e-01, 7.4708e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01]],\n\n        [[7.2437e-01, 1.8942e-01, 6.0114e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [8.4762e-01, 7.2292e-01, 7.9634e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [8.4762e-01, 7.2292e-01, 7.9634e-01],\n         [1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [1.0905e-01, 2.6029e-04, 3.3363e-01]],\n\n        [[7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [6.7323e-01, 8.3049e-01, 2.3087e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [6.2123e-01, 5.2423e-01, 7.4708e-01],\n         [8.4762e-01, 7.2292e-01, 7.9634e-01]],\n\n        [[1.5602e-01, 9.9132e-01, 7.5928e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [7.8971e-01, 8.0188e-01, 1.1340e-01],\n         [7.7508e-01, 8.3921e-01, 4.0363e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [4.8044e-01, 2.0337e-01, 5.8587e-01],\n         [9.7161e-01, 5.6219e-01, 8.1246e-01]]])"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "coordinates[indeces]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "module 'torch' has no attribute 'get_default_tensor_type'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-159700eb45c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_default_tensor_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'torch' has no attribute 'get_default_tensor_type'"
+     ]
+    }
+   ],
+   "source": [
+    "torch.get_default_tensor_type()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.cuda.FloatTensor"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "torch.cuda.FloatTensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.device"
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "type(torch.device('cpu'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.device"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "type(x.device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list = ['one', 'two', 'three']\n",
+    "query = 'three'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indeces = [i for i, word in enumerate(list) if word == query]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[2]"
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "source": [
+    "indeces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "isinstance(query, str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = torch.rand(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = [4.3,3.4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indx = [0,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test[indx] = torch.tensor(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([4.3000, 0.2429, 0.0997, 3.4000])"
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test[indeces] = 4.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([4.3000, 0.2429, 4.5000, 3.4000])"
+     },
+     "metadata": {},
+     "execution_count": 52
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'4.300000190734863'"
+     },
+     "metadata": {},
+     "execution_count": 54
+    }
+   ],
+   "source": [
+    "str(test[0].item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([4.3000, 0.2429, 4.5000, 3.4000])"
+     },
+     "metadata": {},
+     "execution_count": 55
+    }
+   ],
+   "source": [
+    "test.to(torch.device('cpu'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AttributeError",
+     "evalue": "module 'torch' has no attribute 'to'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-56-d6a14f131656>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cpu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'torch' has no attribute 'to'"
+     ]
+    }
+   ],
+   "source": [
+    "torch.to(test,torch.device('cpu'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
