Much more doc, started tutorials.

--- a/sandbox/notebooks/la_ops.ipynb
+++ b/sandbox/notebooks/la_ops.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "import torch \n",
+    "import numpy as np\n",
     "from pymfree.util.utils import insert_A_in_AP_matrix\n",
     "from pymfree.util.utils import asymmetric_distances\n",
     "from pymfree.util.utils import symmetrise_AP\n",
@@ -673,6 +674,86 @@
    ],
    "source": [
     "torch.to(test,torch.device('cpu'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[0.26949575, 0.35836919, 0.19105091],\n       [0.76984487, 0.66057096, 0.29151179],\n       [0.92544005, 0.2203059 , 0.41525836],\n       [0.64671806, 0.72740072, 0.07899761],\n       [0.48486077, 0.04440498, 0.79555028],\n       [0.71290384, 0.78598254, 0.13961501],\n       [0.96916291, 0.84814261, 0.90211771],\n       [0.4955048 , 0.19944255, 0.94577919],\n       [0.48913701, 0.30499959, 0.87072803],\n       [0.72558112, 0.61545471, 0.22941455]])"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "np.random.rand(10,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymfree.util.functional import l2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'l2'"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "str(l2.__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "l2() missing 1 required positional argument: 'x'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-7338449f69b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmyl2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ml2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: l2() missing 1 required positional argument: 'x'"
+     ]
+    }
+   ],
+   "source": [
+    "myl2 = l2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "text": "\u001b[0;31mInit signature:\u001b[0m \u001b[0mL2Norm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;31mSource:\u001b[0m        \n\u001b[0;32mclass\u001b[0m \u001b[0mL2Norm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNorm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n\u001b[0;34m\u001b[0m    \u001b[0;34mr\"\"\" A fast-lane implementation of the l2-norm.\u001b[0m\n\u001b[0;34m\u001b[0m\n\u001b[0;34m    This inherits from Norm and delivers the l2-norm by simply calling\u001b[0m\n\u001b[0;34m    the general constructor with fixed function l2.\u001b[0m\n\u001b[0;34m\u001b[0m\n\u001b[0;34m    Parameters\u001b[0m\n\u001b[0;34m    ----------\u001b[0m\n\u001b[0;34m    numpy : bool, optional\u001b[0m\n\u001b[0;34m        Falg indication if the output shall be a numpy array instead of a\u001b[0m\n\u001b[0;34m        torch tensor. Default to False.\u001b[0m\n\u001b[0;34m\u001b[0m\n\u001b[0;34m\u001b[0m\n\u001b[0;34m    See also\u001b[0m\n\u001b[0;34m    --------\u001b[0m\n\u001b[0;34m    pymfree.core.function.Norm\u001b[0m\n\u001b[0;34m\u001b[0m\n\u001b[0;34m    References\u001b[0m\n\u001b[0;34m    ----------\u001b[0m\n\u001b[0;34m    [1] [L2-Norm on Wolfram](https://mathworld.wolfram.com/L2-Norm.html)\u001b[0m\n\u001b[0;34m    r\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\n\u001b[0;34m\u001b[0m    \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n\u001b[0;34m\u001b[0m        \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;31mFile:\u001b[0m           ~/codes/pymfree/pymfree/core/function.py\n\u001b[0;31mType:\u001b[0m           type\n\u001b[0;31mSubclasses:\u001b[0m     \n"
+    }
+   ],
+   "source": [
+    "L2Norm??"
    ]
   },
   {
