--- a/sandbox/notebooks/parsing_signatures.ipynb
+++ b/sandbox/notebooks/parsing_signatures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pymfree.core.derivative import derivative_parser\n",
-    "from pymfree.core.derivative import derivative_component_parser"
+    "from pymfree.core.derivative import derivative_component_parser\n",
+    "from pymfree.util.polynomial import count_dim_contrib\n",
+    "from pymfree.core.derivative import LinearDerivative"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,38 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sig, comp_sigs = derivative_parser(parsing)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "'3.141(1,2)'"
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "source": [
-    "comp_sigs[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "comp_sig, factor, indices = derivative_component_parser(comp_sigs[0])"
+    "sig, comp_sigs = derivative_parser(parsing)"
    ]
   },
   {
@@ -74,10 +49,37 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[1, 2]"
+      "text/plain": "'3.141(1,2)'"
      },
      "metadata": {},
      "execution_count": 7
+    }
+   ],
+   "source": [
+    "comp_sigs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comp_sig, factor, indices = derivative_component_parser(comp_sigs[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[1, 2]"
+     },
+     "metadata": {},
+     "execution_count": 9
     }
    ],
    "source": [
@@ -809,6 +811,233 @@
    "source": [
     "print(\"Signature\")\n",
     "print(\"---------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'signature' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-7fa11744b8ad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msignature\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'signature' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "signature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'kjasdkj__34  m+$3  .141(   1,2)2(1,1,2,2)-3.5(3,3,3)$ksd$lksd'"
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "parsing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_diff = LinearDerivative(signature=parsing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[0, 1, 1]])"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "count_dim_contrib(my_diff.components[0].component_vector.unsqueeze(0), [0,1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Signature\n---------\n3.141(1,2)2(1,1,2,2)-3.5(3,3,3)\n"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "my_diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "None\n"
+    }
+   ],
+   "source": [
+    "print(my_diff.F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Signature\n---------\n3.141(1,2)2(1,1,2,2)-3.5(3,3,3)\n\n\n"
+    }
+   ],
+   "source": [
+    "print(my_diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'Signature\\n---------\\n3.141(1,2)2(1,1,2,2)-3.5(3,3,3)\\n\\n'"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "my_diff.__str__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "test\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "str"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "type(str(print('test')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[0, 0, 0]])"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "my_diff.components[2].component_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'kjasdkj__34  m+$3  .141(   1,2)2(1,1,2,2)-3.5(3,3,3)$ksd$lksd'"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "parsing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "('3.141(1,2)2(1,1,2,2)-3.5(3,3,3)',\n ['3.141(1,2)', '2(1,1,2,2)', '-3.5(3,3,3)'])"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "derivative_parser(parsing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "('3.141(1,2)', 3.141, [1, 2])"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "derivative_component_parser('3.141(1,2)')"
    ]
   },
   {
